[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danbooru-downloader-py"
version = "1.0.0"
description = "A Python CLI tool for downloading and managing datasets from Danbooru."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Dongha Lim" }
]
dependencies = [
  "click>=8.1",
  "requests>=2.32.5",
  "pillow>=12.1.1"
]

[project.scripts]
danbooru-downloader-py = "danbooru_downloader_py.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]